# ctxpact

./: .gitignore  BENCHMARKS.md  Dockerfile  Makefile  README.md  config.yaml  pyproject.toml
bench/: benchmark_locomo.py  benchmark_longmemeval.py  benchmark_readagent_direct.py  benchmark_report.py  benchmark_strategies.py  benchmark_summary.py
ctxpact/: __init__.py  config.py  server.py
ctxpact/compaction/: __init__.py  book.py  chunker.py  detector.py  engine.py  prompts.py  pruner.py  rlm_extractor.py  summarizer.py  tokens.py
ctxpact/isolation/: __init__.py  graph_builder.py  graph_manager.py  isolator.py  language_parser.py  python_parser.py  seed_finder.py  ts_parser.py
ctxpact/routing/: __init__.py  circuit_breaker.py  client.py  health.py  router.py
ctxpact/session/: __init__.py  models.py  store.py
scripts/: stress_test_compaction.py  test_openrouter.py  validate_with_forge.sh
tests/: test_circuit_breaker.py  test_detector.py  test_isolation.py  test_pruner.py  test_tokens.py
